add solution for game Moon Lander step 23 of 23