@@ -117,4 +117,4 @@ public class MoonLanderGame extends Game {
         stopTurnTimer();
         score = 0;
     }
-}
+} //--module-path "D:\TheProjects\IdeaProjects\JavaRushTasks\lib\javafx-sdk-17.0.2\lib" --add-modules javafx.controls,javafx.fxml
